--- a/Contained/Contained/Storyboards/Base.lproj/Main.storyboard
+++ b/Contained/Contained/Storyboards/Base.lproj/Main.storyboard
@@ -1,11 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OPp-ft-ua4">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Settings-->
+        <scene sceneID="nlw-d5-gPY">
+            <objects>
+                <viewController id="S3m-c5-2ei" customClass="SettingsViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Juj-7C-KRm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="mcY-9K-lDU"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings" id="wwz-5y-mPw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDh-Oy-wQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="45" y="544"/>
+        </scene>
+        <!--Info View Controller-->
+        <scene sceneID="ced-Iz-d8f">
+            <objects>
+                <viewController id="KqZ-aN-mnd" customClass="InfoViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AYb-ln-B66">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="VCg-jz-67O"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gem-Dn-51a">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="ueU-Wh-iK4">
+                            <connections>
+                                <segue destination="9tC-IY-SKH" kind="show" id="l3T-1P-dti"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vA2-sb-a8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="419" y="1209"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="bVD-bz-YLg">
+            <objects>
+                <viewController id="9tC-IY-SKH" customClass="InfoViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kqO-bU-qFE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Haz-o1-x9q"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="uwZ-KL-6h1">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="h1y-xR-wbM">
+                            <connections>
+                                <segue destination="bZ5-Rt-cyr" kind="show" id="g1t-5T-a4a"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g1H-3g-52X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1278" y="1209"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="N5U-WU-42S">
+            <objects>
+                <viewController id="bZ5-Rt-cyr" customClass="InfoViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fNe-vb-Fbo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="dWV-Zq-0d2"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="igk-cg-LRw">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="Wwu-xl-iEf"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sK1-bp-FJT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2170" y="1209"/>
+        </scene>
+        <!--Play-->
+        <scene sceneID="OKg-GA-AsV">
+            <objects>
+                <viewController id="ugc-Ks-Kag" customClass="GameViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G32-26-98n">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iBG-K8-jhF"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Play" image="game_controller" id="Ye0-uc-aZK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xzw-yz-tbS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-935" y="544"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Gqk-K3-AzG">
+            <objects>
+                <tabBarController id="OPp-ft-ua4" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="36H-lz-bXO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ugc-Ks-Kag" kind="relationship" relationship="viewControllers" id="P39-Vi-adt"/>
+                        <segue destination="QIl-gZ-47L" kind="relationship" relationship="viewControllers" id="a8s-lG-tnM"/>
+                        <segue destination="S3m-c5-2ei" kind="relationship" relationship="viewControllers" id="0ZO-iU-Q9Q"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RZi-qN-v68" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-441" y="-227"/>
+        </scene>
+        <!--Info-->
+        <scene sceneID="FlS-uR-gxp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QIl-gZ-47L" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Info" image="info" id="2ne-4V-Ttr"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RVS-kg-tM6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KqZ-aN-mnd" kind="relationship" relationship="rootViewController" id="ilU-ZJ-zye"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jSv-iG-YtH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-442" y="1210"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="game_controller" width="30" height="30"/>
+        <image name="info" width="30" height="30"/>
+        <image name="settings" width="30" height="30"/>
+    </resources>
 </document>
