--- a/Contained/Contained/Storyboards/Base.lproj/Main.storyboard
+++ b/Contained/Contained/Storyboards/Base.lproj/Main.storyboard
@@ -33,11 +33,23 @@
                     <view key="view" contentMode="scaleToFill" id="AYb-ln-B66">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crabs" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDu-G5-klB">
+                                <rect key="frame" x="140.5" y="419" width="133" height="58"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hDu-G5-klB" firstAttribute="centerX" secondItem="AYb-ln-B66" secondAttribute="centerX" id="fSA-83-VVA"/>
+                            <constraint firstItem="hDu-G5-klB" firstAttribute="centerY" secondItem="AYb-ln-B66" secondAttribute="centerY" id="ocJ-Q9-u96"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VCg-jz-67O"/>
                     </view>
                     <navigationItem key="navigationItem" id="gem-Dn-51a">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="ueU-Wh-iK4">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="ueU-Wh-iK4">
                             <connections>
                                 <segue destination="9tC-IY-SKH" kind="show" id="l3T-1P-dti"/>
                             </connections>
@@ -48,18 +60,32 @@
             </objects>
             <point key="canvasLocation" x="419" y="1209"/>
         </scene>
-        <!--Title-->
+        <!--Info View Controller-->
         <scene sceneID="bVD-bz-YLg">
             <objects>
                 <viewController id="9tC-IY-SKH" customClass="InfoViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kqO-bU-qFE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7gM-eD-Q21">
+                                <rect key="frame" x="142" y="419.5" width="130" height="57.5"/>
+                                <string key="text">Tap to move 
+the crab</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7gM-eD-Q21" firstAttribute="centerY" secondItem="kqO-bU-qFE" secondAttribute="centerY" id="AGN-o4-e8N"/>
+                            <constraint firstItem="7gM-eD-Q21" firstAttribute="centerX" secondItem="kqO-bU-qFE" secondAttribute="centerX" id="xyw-og-ZGW"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Haz-o1-x9q"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="uwZ-KL-6h1">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="h1y-xR-wbM">
+                    <navigationItem key="navigationItem" id="uwZ-KL-6h1">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="h1y-xR-wbM">
                             <connections>
                                 <segue destination="bZ5-Rt-cyr" kind="show" id="g1t-5T-a4a"/>
                             </connections>
@@ -70,18 +96,34 @@
             </objects>
             <point key="canvasLocation" x="1278" y="1209"/>
         </scene>
-        <!--Title-->
+        <!--Info View Controller-->
         <scene sceneID="N5U-WU-42S">
             <objects>
                 <viewController id="bZ5-Rt-cyr" customClass="InfoViewController" customModule="Contained" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fNe-vb-Fbo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's play!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ot-4a-vIq">
+                                <rect key="frame" x="154.5" y="433.5" width="105" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3Ot-4a-vIq" firstAttribute="centerX" secondItem="fNe-vb-Fbo" secondAttribute="centerX" id="5Ga-rA-onN"/>
+                            <constraint firstItem="3Ot-4a-vIq" firstAttribute="centerY" secondItem="fNe-vb-Fbo" secondAttribute="centerY" id="yzj-bA-iXA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dWV-Zq-0d2"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="igk-cg-LRw">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="Wwu-xl-iEf"/>
+                    <navigationItem key="navigationItem" id="igk-cg-LRw">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="Wwu-xl-iEf">
+                            <connections>
+                                <action selector="done:" destination="bZ5-Rt-cyr" id="GiR-hj-vod"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sK1-bp-FJT" userLabel="First Responder" sceneMemberID="firstResponder"/>
